logout feature, auth fix

--- a/DaVenti/Views/Auth/Registration.cshtml
+++ b/DaVenti/Views/Auth/Registration.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Registration";
+    Layout = "~/Views/Shared/_Landing.cshtml";
+
 }
 
 <h2>Join our team, become one with the wind.</h2>
