--- a/DaVenti/Views/Auth/Login.cshtml
+++ b/DaVenti/Views/Auth/Login.cshtml
@@ -1,16 +1,18 @@
-﻿@model DaVenti.Models.Login
+﻿
+@model DaVenti.Models.Login
 
 @{
     ViewBag.Title = "Login";
+    Layout = "~/Views/Shared/_Landing.cshtml";
 }
 
 <h2>Welcome</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -36,10 +38,17 @@
             </div>
         </div>
     </div>
+
+    if (ViewBag.Message != null)
+    {
+        <div class="alert alert-danger">
+            <strong>Error! </strong>@ViewBag.Message
+        </div>
+    }
 }
 
 <div>
-    @Html.ActionLink("Register", "Registration", "Employee")
+    @Html.ActionLink("Register", "Registration", "Auth")
 </div>
 
 @section Scripts {
