--- a/DaVenti/Views/Shared/_Layout.cshtml
+++ b/DaVenti/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Category", "Index", "Category")</li>
                     <li>@Html.ActionLink("Book", "Index", "Book")</li>
                     <li>@Html.ActionLink("Promo", "Index", "Promo")</li>
                     <li>@Html.ActionLink("Logout", "Logout", "Auth")</li>
