--- a/DaVenti/Views/Promo/Index.cshtml
+++ b/DaVenti/Views/Promo/Index.cshtml
@@ -4,48 +4,51 @@
     ViewBag.Title = "Promo";
 }
 
-<h2>Promo Data</h2>
+<h2>Promo List</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+<a class="btn btn-success pull-right" onclick="location.href='@Url.Action("Create")';return false;">Add New Promo</a>
+<table class="table table-striped table-hover">
     <tr>
+        <th>
+            Promo ID
+        </th>
         <th>
             Promo Name
         </th>
         <th>
-           Discount
+            Discount
         </th>
         <th>
             Start Discount
         </th>
         <th>
-           End Discount
+            End Discount
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name_promo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.discount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.start_discount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.end_discount)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_promo }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_promo }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_promo })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.id_promo)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.name_promo)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.discount)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.start_discount)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.end_discount)
+    </td>
+    <td>
+        <a class="btn btn-warning" onclick="location.href='@Url.Action("Edit", new { id = item.id_promo })';return false;">Edit</a>
+        <a class="btn btn-danger" onclick="location.href='@Url.Action("Delete", new { id = item.id_promo })';return false;">Delete</a>
+    </td>
+</tr>
 }
 
 </table>
