--- a/DaVenti/Views/Book/Delete.cshtml
+++ b/DaVenti/Views/Book/Delete.cshtml
@@ -6,13 +6,19 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this book?</h3>
 <div>
-    <h4>Book</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.fk_id_category)
+            Book ID
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.id_book)
+        </dd>
+        <dt>
+            Category ID
         </dt>
 
         <dd>
@@ -20,7 +26,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.fk_id_promo)
+            Promo ID
         </dt>
 
         <dd>
@@ -28,7 +34,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.name_book)
+            Book Title
         </dt>
 
         <dd>
@@ -36,7 +42,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.author)
+            Author
         </dt>
 
         <dd>
@@ -44,7 +50,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.price_book)
+            Book Price
         </dt>
 
         <dd>
@@ -52,7 +58,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.pages)
+            Pages
         </dt>
 
         <dd>
@@ -60,7 +66,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.date_published)
+            Date Published
         </dt>
 
         <dd>
@@ -68,7 +74,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.publisher)
+            Publisher
         </dt>
 
         <dd>
@@ -76,7 +82,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.stock)
+            Stock
         </dt>
 
         <dd>
@@ -85,11 +91,15 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
+        <div class="form-actions no-color col-md-offset-2 col-md-10">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </div>
+
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
