??? kenapa ketinggalan terus ???

--- a/DaVenti/Views/Home/Index.cshtml
+++ b/DaVenti/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
     ViewBag.Title = "Dashboard";
 }
 
-<div class="row text-center vertical-center">
-    <div class="col">
+<div id="outer" class="text-center vertical-center">
+    <div id="inner" class="col">
         <h1 class="mb-2 display-4">Welcome!</h1>
         <blockquote class="blockquote">
             <p class="mb-2">Thought is the wind, knowledge the sail, and mankind the vessel.</p>
