--- a/DaVenti/Views/Shared/_Layout.cshtml
+++ b/DaVenti/Views/Shared/_Layout.cshtml
@@ -1,4 +1,40 @@
 ﻿<!DOCTYPE html>
+
+<style>
+    body {
+        height: 100%;
+    }
+
+    body {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+    }
+
+    .vertical-center {
+        min-height: 100%; /* fallback for browsers do not support vh unit */
+        min-height: 100vh; /* these two lines are counted as one :-)       */
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
+
+    #outer {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+    }
+
+    #inner {
+        margin: auto;
+    }
+
+</style>
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -31,10 +67,7 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
